Refactor entire project to use JDT resolution
Co-authored-by: Bartosz Skrzypczak <barteks2x@gmail.com>